Thu Jan 20 15:28:10 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/fe/y.tab.cpp:
          Corrected a fix that was committed for bug#3312. In that change
          I was too smart and knowing the implementation of
          UTL_ScopeStack::pop() I tried to mess with prefixes. Actually it
          was not needed (I was warned by Jeff Parsons about that) and
          when used it resulted in wrong generation of prefixes.

Thu Jan 20 11:42:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Wed Jan 19 12:16:46 UTC 2011  Martin Corino  <mcorino@remedy.nl>

            * tao/TAO_Internal.cpp:
              Fixed problem with argument parsing.

        Fri Jan 14 17:19:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * utils/catior/Catior_i.cpp:
                  Added more vendor ids

                * utils/catior/README.catior:
                  Updated executable name

                * TAO_IDL/be/be_visitor_operation/operation_svs.cpp:
                  Reverted change below, wasn't complete

        Fri Jan 14 10:37:44 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
                  Layout change

                * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
                  Layout change to the generated code

                * TAO_IDL/be/be_visitor_operation/operation_svs.cpp:
                  Fixed race condition in generated servant, more fixes have to be made

        Mon Jan 10 12:39:17 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * etc/tao_portableserver.doxygen:
                  Doxygen improvement

        Mon Jan 10 09:10:17 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * etc/tao.doxygen:
                * etc/tao_anytypecode.doxygen:
                * etc/tao_av.doxygen: