@@ -1,3 +1,8 @@
+Fri Jan 21 10:50:55 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * tests/OBV/ValueBox/client.cpp:
+          Use ACE::is_equal() to compare floating point values.
+
 Thu Jan 20 15:28:10 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * TAO_IDL/fe/y.tab.cpp:
